--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,7 @@
 			<optional>true</optional>
 		</dependency>-->
 		<!-- Exclude Logback -->
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
@@ -158,6 +159,16 @@
 			<artifactId>log4j-api</artifactId>
 			<version>2.24.1</version>
 		</dependency>
+		<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-web</artifactId>
+    <version>6.3.4</version>
+</dependency>
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-context</artifactId>
+    <version>6.1.14</version>
+</dependency>
 
 
 	</dependencies>
